--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "cannon": "^0.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "three": "^0.126.0",
+    "three-ik": "^0.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
